src/tests/fixtures/arguments/ObjectLiteralArgument.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello({ greeting }: { greeting: { foo: string; bar: string } }): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/ObjectLiteralArgument.invalid.ts:4:35 - error: Unexpected type literal. Grats does not support this specific type literal. Likely because it does not map to a valid GraphQL literal or built in scalar type. You may want to define a named GraphQL type elsewhere and reference it here.

4   hello({ greeting }: { greeting: { foo: string; bar: string } }): string {
                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
